Fix API Routes with external login
