# Artisashop/ClientApp/src/api/models/ExternalLoginConfirmationViewModel.ts
@@ -1,0 +1,110 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * API Artichaut
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: v1
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { exists, mapValues } from '../runtime';
+/**
+ * 
+ * @export
+ * @interface ExternalLoginConfirmationViewModel
+ */
+export interface ExternalLoginConfirmationViewModel {
+    /**
+     * 
+     * @type {string}
+     * @memberof ExternalLoginConfirmationViewModel
+     */
+    email: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExternalLoginConfirmationViewModel
+     */
+    gender: string;
+    /**
+     * 
+     * @type {Date}
+     * @memberof ExternalLoginConfirmationViewModel
+     */
+    birthdate: Date;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExternalLoginConfirmationViewModel
+     */
+    givenName: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExternalLoginConfirmationViewModel
+     */
+    familyName: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof ExternalLoginConfirmationViewModel
+     */
+    preferredName?: string | null;
+}
+
+/**
+ * Check if a given object implements the ExternalLoginConfirmationViewModel interface.
+ */
+export function instanceOfExternalLoginConfirmationViewModel(value: object): boolean {
+    let isInstance = true;
+    isInstance = isInstance && "email" in value;
+    isInstance = isInstance && "gender" in value;
+    isInstance = isInstance && "birthdate" in value;
+    isInstance = isInstance && "givenName" in value;
+    isInstance = isInstance && "familyName" in value;
+
+    return isInstance;
+}
+
+export function ExternalLoginConfirmationViewModelFromJSON(json: any): ExternalLoginConfirmationViewModel {
+    return ExternalLoginConfirmationViewModelFromJSONTyped(json, false);
+}
+
+export function ExternalLoginConfirmationViewModelFromJSONTyped(json: any, ignoreDiscriminator: boolean): ExternalLoginConfirmationViewModel {
+    if ((json === undefined) || (json === null)) {
+        return json;
+    }
+    return {
+        
+        'email': json['email'],
+        'gender': json['gender'],
+        'birthdate': (new Date(json['birthdate'])),
+        'givenName': json['givenName'],
+        'familyName': json['familyName'],
+        'preferredName': !exists(json, 'preferredName') ? undefined : json['preferredName'],
+    };
+}
+
+export function ExternalLoginConfirmationViewModelToJSON(value?: ExternalLoginConfirmationViewModel | null): any {
+    if (value === undefined) {
+        return undefined;
+    }
+    if (value === null) {
+        return null;
+    }
+    return {
+        
+        'email': value.email,
+        'gender': value.gender,
+        'birthdate': (value.birthdate.toISOString().substr(0,10)),
+        'givenName': value.givenName,
+        'familyName': value.familyName,
+        'preferredName': value.preferredName,
+    };
+}
+
